--- a/.htaccess
+++ b/.htaccess
@@ -106,3 +106,42 @@ RewriteRule ^(hd720)(.*) code.php?x=1280x720$2
 RewriteRule ^(hd1080)(.*) code.php?x=1920x1080$2
 
 # Header set Cache-Control "public, max-age=2592000"
+
+#### Expires By Type
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresDefault "access plus 60 seconds"
+    ExpiresByType image/x-icon "access plus 2592000 seconds"
+    ExpiresByType image/jpeg "access plus 2592000 seconds"
+    ExpiresByType image/jpg "access plus 2592000 seconds"
+    ExpiresByType image/png "access plus 2592000 seconds"
+    ExpiresByType image/gif "access plus 2592000 seconds"
+    ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
+    ExpiresByType text/css "access plus 2592000 seconds"
+    ExpiresByType text/javascript "access plus 2592000 seconds"
+    ExpiresByType application/x-javascript "access plus 2592000 seconds"
+    ExpiresByType text/html "access plus 600 seconds"
+    ExpiresByType application/xhtml+xml "access plus 600 seconds"
+</IfModule>
+
+#### Cache-Control
+<IfModule mod_headers.c>
+    <FilesMatch "\\.(ico|jpe?g|png|gif|swf)$">
+        Header set Cache-Control "max-age=2592000, public"
+#        Header set Last-Modified "Mon, 24 Mar 2014 00:00:00 GMT"
+    </FilesMatch>
+    <FilesMatch "\\.(css|js)$">
+        Header set Cache-Control "max-age=2592000, public"
+#        Header set Last-Modified "Mon, 24 Mar 2014 00:00:00 GMT"
+    </FilesMatch>
+    <FilesMatch "\\.(x?html?|php|xml)$">
+        Header set Cache-Control "max-age=600, private, must-revalidate"
+#        Header set Last-Modified "Mon, 24 Mar 2014 00:00:00 GMT"
+    </FilesMatch>
+</IfModule>
+
+#### ETags
+<IfModule mod_headers.c>
+    Header unset ETag
+</IfModule>
+FileETag None
