--- a/.htaccess
+++ b/.htaccess
@@ -110,7 +110,7 @@ RewriteRule ^(hd1080)(.*) code.php?x=1920x1080$2
 #### Expires By Type
 <IfModule mod_expires.c>
     ExpiresActive On
-    ExpiresDefault "access plus 60 seconds"
+#    ExpiresDefault "access plus 60 seconds"
     ExpiresByType image/x-icon "access plus 2592000 seconds"
     ExpiresByType image/jpeg "access plus 2592000 seconds"
     ExpiresByType image/jpg "access plus 2592000 seconds"
@@ -120,8 +120,8 @@ RewriteRule ^(hd1080)(.*) code.php?x=1920x1080$2
     ExpiresByType text/css "access plus 2592000 seconds"
     ExpiresByType text/javascript "access plus 2592000 seconds"
     ExpiresByType application/x-javascript "access plus 2592000 seconds"
-    ExpiresByType text/html "access plus 600 seconds"
-    ExpiresByType application/xhtml+xml "access plus 600 seconds"
+#    ExpiresByType text/html "access plus 600 seconds"
+#    ExpiresByType application/xhtml+xml "access plus 600 seconds"
 </IfModule>
 
 #### Cache-Control
@@ -134,10 +134,10 @@ RewriteRule ^(hd1080)(.*) code.php?x=1920x1080$2
         Header set Cache-Control "max-age=2592000, public"
 #        Header set Last-Modified "Mon, 24 Mar 2014 00:00:00 GMT"
     </FilesMatch>
-    <FilesMatch "\\.(x?html?|php|xml)$">
-        Header set Cache-Control "max-age=600, private, must-revalidate"
+#    <FilesMatch "\\.(x?html?|php|xml)$">
+#        Header set Cache-Control "max-age=600, private, must-revalidate"
 #        Header set Last-Modified "Mon, 24 Mar 2014 00:00:00 GMT"
-    </FilesMatch>
+#    </FilesMatch>
 </IfModule>
 
 #### ETags
